# folpsD

./: .gitattributes  B000_B202_windowing.ipynb  FOLPSD.py  README.md  Sugiyama_basis.nb  Sugiyama_basis_integrands.nb  example.ipynb  folps.py  setup.py  test_precision.ipynb  tools_jax.py
part3/desi-y1-kp-main/: .gitignore  LICENSE  README.md  pyproject.toml
part3/desi-y1-kp-main/desi_y1_cosmo_bindings/: .gitignore  README.md  bindings_bao.py  bindings_fs_bao_backup_jan28_v2.py
part3/desi-y1-kp-main/desi_y1_files/: __init__.py  catalog_tools.py  cosmo_tools.py  file_manager.py  io.py  systematic_template.py  tension_barometer.py  window.py
part3/desi-y1-kp-main/desi_y1_plotting/: README.md  __init__.py  base.py  compAbmock_data.py  kp3.py  kp4.py  kp5.py  kp7.paramnames  kp7.py  utils.py
part3/desi-y1-kp-main/scripts/: .gitignore  README.md  plot_y1kp4_key_paper.py  plot_y1kp5_key_paper.py  y1_abacus_2pt.py  y1_abacus_fits.py  y1_bao_cosmo.py  y1_bao_cosmo_tools.py  y1_bao_desilike_cosmo.py  y1_bao_desilike_cosmo_tools.py  y1_box_2pt_tools.py  y1_box_abacus_2pt.py  y1_box_ez_2pt.py  y1_covariance.py  y1_data_2pt.py  y1_data_2pt_tools.py  y1_data_fits.py  y1_data_fits_tools.py  y1_data_shapefit_bao_fits.py  y1_ez_2pt.py  y1_ez_fits.py  y1_fs_cosmo_backup_jan28.py  y1_fs_cosmo_fs+bbn+ns10.py  y1_fs_cosmo_tools.py  y1_fs_cosmo_tools_backup_jan28.py  y1_fs_desilike_cosmo.py  y1_glam_2pt.py  y1_kp4_unblinding_2pt.py  y1_kp4_unblinding_cosmo.py  y1_kp4_unblinding_fits.py  y1_metaparams.py  y1_mock_tools.py  y1_raw_abacus_2pt.py  y1_raw_abacus_mocks.py  y1_ric.py  (+1 more)
(+250 files in other folders)
